# r_progmetal_spotify

./: .dockerignore  .env.docker  .env.example  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  LICENSE  Makefile  README.md  agent.env  docker-compose.yml  pyproject.toml
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
catalog/: admin.py  context_processors.py  forms.py  middleware.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_seed_genres_vocal_styles.py  0003_syncrecord.py  0004_syncoperation.py  0005_syncoperation_current_tab.py  0006_add_spotify_cache_fields.py  0007_change_album_genre_to_many_to_many.py  0008_user_spotifytoken.py  0009_add_genre_management_fields.py  0010_listenedalbum.py  0011_ignoredalbum.py
catalog/services/: album_cache.py  album_importer.py  google_sheets.py  spotify_auth.py  spotify_client.py  sync_manager.py
catalog/templates/: base.html
catalog/templatetags/: __init__.py  catalog_extras.py
config/: settings.py  urls.py
docker/postgres/: init.sql  postgresql.conf
scripts/: docker-entrypoint.sh
specs/001-album-catalog/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks-album-grid.md  tasks-postgres-docker.md  tasks.md
specs/002-catalog-statistics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-catalog-filtering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-sync-button/: data-model.md  (+5 more)
tests/: test_database_config.py  test_multi_tab_parsing.py  test_pagination.py  test_search.py
(+65 files in other folders)
