[project]
name = "progmetal"
version = "0.0.1"
description = "r/progmetal sheet release visualizer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django ~=5.2.6",
    "psycopg ~= 3.2.10",
    "django-htmx ~= 1.16.0",
    "spotipy ~= 2.24.0",
    "openpyxl>=3.1.5",
]

[dependency-groups]
dev = [
    "pytest",
    "pyright",
    "pytest-django>=4.11.1",
]
ling = [
     "ruff"
]

[tool.uv]
default-groups = "all"
