[project]
name = "progmetal"
version = "0.0.1"
description = "r/progmetal sheet release visualizer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Django ~=5.2.6",
    "psycopg ~= 3.2.10",
    "django-htmx ~= 1.16.0",
    "spotipy ~= 2.24.0",
    "openpyxl>=3.1.5",
    "python-dotenv>=1.2.1",
    "dj-database-url>=3.0.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pyright",
    "pytest-django>=4.11.1",
    "django-stubs>=5.1.2",
]
ling = [
     "ruff"
]

[tool.uv]
default-groups = "all"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Django-specific test configuration
django_find_project = true
